HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumFieldApply/Source/Main.uv
//! Rejected FFI specimen for generic enum applications with substituted non-FfiSafe payloads.

#layout(C)
public enum GenericFfiEnum<TValue> |: FfiSafe(TValue)
{
    Value(TValue)
}

extern "C" {
    public procedure importedEnum(value: GenericFfiEnum<bool>) -> i32
}

